cluster/apps/lore/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: lore
  namespace: lore
spec:
  hosts:
    - lore.${domain_name}
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - authority:
            exact: lore.${domain_name}
          uri:
            exact: /
      redirect:
        uri: /lkml/
    - match:
        - authority:
            exact: lore.${domain_name}
          uri:
            prefix: /
      route:
        - destination:
            host: lore.lore.svc.cluster.local
            port:
              number: 80
